[gd_scene load_steps=4 format=3 uid="uid://xp4vtry6yety"]

[ext_resource type="Script" path="res://MusicNode.gd" id="1_i2u8d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebdc6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aseyp"]

[node name="MusicNode" type="Node2D"]
script = ExtResource("1_i2u8d")

[node name="FD_OPENfiles" type="FileDialog" parent="."]
title = "Open File(s)"
position = Vector2i(300, 150)
size = Vector2i(454, 400)
ok_button_text = "Open"
file_mode = 1
access = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ColorRectLabel" type="ColorRect" parent="."]
offset_left = 288.0
offset_top = 120.0
offset_right = 544.0
offset_bottom = 248.0
color = Color(0, 0, 0, 0.243137)

[node name="HSlider" type="HSlider" parent="."]
offset_left = 285.0
offset_top = 232.0
offset_right = 544.0
offset_bottom = 286.0
max_value = 1.0
step = 0.01
value = 0.3

[node name="MusicTimeLabel" type="Label" parent="."]
offset_left = 48.0
offset_top = 28.0
offset_right = 85.0
offset_bottom = 52.0
text = "0:00"

[node name="MusicTotalTimeLabel" type="Label" parent="."]
offset_left = 48.0
offset_top = 53.0
offset_right = 157.0
offset_bottom = 77.0
text = "0:00"

[node name="song_list" type="ItemList" parent="."]
offset_left = 294.0
offset_top = 127.0
offset_right = 538.0
offset_bottom = 240.0
theme_override_colors/font_color = Color(0, 0.694118, 0, 1)
theme_override_colors/font_hovered_color = Color(0, 1, 0, 1)
theme_override_colors/font_selected_color = Color(0, 1, 0, 1)
theme_override_colors/guide_color = Color(0.716296, 0.716296, 0.716296, 1)
theme_override_styles/selected = SubResource("StyleBoxEmpty_ebdc6")
theme_override_styles/selected_focus = SubResource("StyleBoxEmpty_aseyp")

[connection signal="files_selected" from="FD_OPENfiles" to="." method="_on_fd_open_files_selected"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="item_selected" from="song_list" to="." method="_on_song_list_item_selected"]
